force-app/main/default/objects/Blood_donor__c/Blood_donor__c.object-meta.xml
<CustomObject>
    <label>Blood donor</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>Donor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>blood donors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>