force-app/main/default/objects/Blood_donor__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <description>displays the age</description>
    <formula>year( TODAY() )-year( DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>