force-app/main/default/objects/Blood_donor__c/fields/blood_group__c.field-meta.xml
<CustomField>
    <fullName>blood_group__c</fullName>
    <label>blood group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O POSITIVE</fullName>
            </value>
            <value>
                <fullName>O NEGETIVE</fullName>
            </value>
            <value>
                <fullName>A POSITIVE</fullName>
            </value>
            <value>
                <fullName>A NEGETIVE</fullName>
            </value>
            <value>
                <fullName>B POSITIVE</fullName>
            </value>
            <value>
                <fullName>B NEGETIVE</fullName>
            </value>
            <value>
                <fullName>AB POSITIVE</fullName>
            </value>
            <value>
                <fullName>AB NEGETIVE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>