force-app/main/default/objects/Blood_donor__c/fields/days_left_to_donate__c.field-meta.xml
<CustomField>
    <fullName>days_left_to_donate__c</fullName>
    <description>gives the number of days left to donate blood again</description>
    <formula>IF((TODAY()  - Last_Donated_Date__c) &gt; 90,0,90  -  (TODAY()  - Last_Donated_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days left to donate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>