force-app/main/default/objects/Blood_donor__c/fields/donor_name__c.field-meta.xml
<CustomField>
    <fullName>donor_name__c</fullName>
    <description>name of the blood donor</description>
    <label>donor name</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>