force-app/main/default/objects/Blood_donor__c/fields/eligible_for_blood_donation__c.field-meta.xml
<CustomField>
    <fullName>eligible_for_blood_donation__c</fullName>
    <description>checks wether the person is eligible to donate the blood</description>
    <formula>IF( age__c  &gt; 18 &amp;&amp;  weight__c  &gt; 50&amp;&amp; (MONTH( TODAY() ) - MONTH( Last_Donated_Date__c ))&gt;3    ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eligible for blood donation</label>
    <type>Checkbox</type>
</CustomField>