force-app/main/default/objects/Blood_donor__c/fields/Email_id__c.field-meta.xml
<CustomField>
    <fullName>Email_id__c</fullName>
    <description>email id of the donor</description>
    <label>Email id</label>
    <type>Email</type>
</CustomField>