force-app/main/default/objects/Blood_donor__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>