force-app/main/default/objects/Blood_donor__c/fields/weight__c.field-meta.xml
<CustomField>
    <fullName>weight__c</fullName>
    <description>enter the weight of the donor in kgs</description>
    <label>weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>