force-app/main/default/objects/Blood_donor__c/validationRules/no_record_with_less_age.validationRule-meta.xml
<ValidationRule>
    <fullName>no_record_with_less_age</fullName>
    <active>true</active>
    <description>no record is saved with age less than 18</description>
    <errorConditionFormula>age__c &lt;18</errorConditionFormula>
    <errorMessage>the age should not be less than 18</errorMessage>
</ValidationRule>